--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">FeedSense</string>
     <string name="insert_session_code">Insira o codigo da sessao:</string>
     <string name="submit_code">Enviar</string>
+    <string name="join_session">Entrar na sessao</string>
 </resources>
